force-app/main/default/objects/Opportunity/fields/IsLegacy__c.field-meta.xml
<CustomField>
    <fullName>IsLegacy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for Opportunities imported from Intacct for Legacy billing migration.</description>
    <label>IsLegacy</label>
    <type>Checkbox</type>
</CustomField>