force-app/main/default/objects/Opportunity/fields/Last_ROE_Task_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_ROE_Task_Date__c</fullName>
    <label>Last ROE Task Date</label>
    <type>DateTime</type>
</CustomField>