force-app/main/default/objects/Opportunity/fields/LLFreeMonths__c.field-meta.xml
<CustomField>
    <fullName>LLFreeMonths__c</fullName>
    <label>LLFreeMonths</label>
    <summarizedField>OpportunityLineItem.Number_of_Free_Months__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Code_Formula__c</field>
        <operation>startsWith</operation>
        <value>301</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>