force-app/main/default/objects/Opportunity/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <label>Locations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>