force-app/main/default/objects/Opportunity/fields/Management_System__c.field-meta.xml
<CustomField>
    <fullName>Management_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Management System</label>
    <referenceTo>Management_System__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>