force-app/main/default/objects/Opportunity/fields/Max_Trial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Trial_End_Date__c</fullName>
    <label>Max Trial End Date</label>
    <summarizedField>OpportunityLineItem.Trial_End_Date__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>