force-app/main/default/objects/Opportunity/fields/Merge_Opp__c.field-meta.xml
<CustomField>
    <fullName>Merge_Opp__c</fullName>
    <inlineHelpText>Used by admin to merge Opportunities</inlineHelpText>
    <label>Merge Opp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>