force-app/main/default/objects/Opportunity/fields/Merged__c.field-meta.xml
<CustomField>
    <fullName>Merged__c</fullName>
    <formula>AccountId =  Duplicate_Account__r.Id</formula>
    <label>Merged</label>
    <type>Checkbox</type>
</CustomField>