force-app/main/default/objects/Opportunity/fields/Min_Contract_Start_Validation__c.field-meta.xml
<CustomField>
    <fullName>Min_Contract_Start_Validation__c</fullName>
    <label>Min Contract Start - Validation</label>
    <summarizedField>OpportunityLineItem.RecurSoft__Contract_Term_Start_Date_New__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>