force-app/main/default/objects/Opportunity/fields/Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Amount__c</fullName>
    <formula>Number_of_Locations__c * Monthly_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>