force-app/main/default/objects/Opportunity/fields/Months_Paid_Trial__c.field-meta.xml
<CustomField>
    <fullName>Months_Paid_Trial__c</fullName>
    <inlineHelpText>Enter the number of Months the office has paid at the Original MSF</inlineHelpText>
    <label>Months Paid - Trial</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>