force-app/main/default/objects/Opportunity/fields/Months_Remaining_Annual__c.field-meta.xml
<CustomField>
    <fullName>Months_Remaining_Annual__c</fullName>
    <inlineHelpText>Enter the number of Months the customer would pay to fulfill the original contract</inlineHelpText>
    <label>Months Remaining - Annual</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>