force-app/main/default/objects/Opportunity/fields/Months_Remaining_Months_Paid__c.field-meta.xml
<CustomField>
    <fullName>Months_Remaining_Months_Paid__c</fullName>
    <label>Months Remaining/Months Paid</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>