force-app/main/default/objects/Opportunity/fields/Months_til_Effective_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Months_til_Effective_Cancel__c</fullName>
    <description>Used to find how many months between when an office signs up and when they cancel</description>
    <formula>12*(Year( Cancel_Month__c ) - Year(  Most_Recent_Contract_Date__c  )) + (Month( Cancel_Month__c ) - Month(Most_Recent_Contract_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months til Effective Cancel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>