force-app/main/default/objects/Opportunity/fields/Most_Recent_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Contract_Date__c</fullName>
    <description>Sugar field for Save Opportunity</description>
    <label>Most Recent Contract Date</label>
    <type>Date</type>
</CustomField>