force-app/main/default/objects/Opportunity/fields/MSF_Free_Months__c.field-meta.xml
<CustomField>
    <fullName>MSF_Free_Months__c</fullName>
    <description>Used for approval process.</description>
    <inlineHelpText>Used for approval process.</inlineHelpText>
    <label>MSF Free Months</label>
    <summarizedField>OpportunityLineItem.Number_of_Free_Months__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Code_Formula__c</field>
        <operation>equals</operation>
        <value>3000</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>