force-app/main/default/objects/Opportunity/fields/New_Free_Months__c.field-meta.xml
<CustomField>
    <fullName>New_Free_Months__c</fullName>
    <description>Used to calculate Keep information on Save opportunities</description>
    <formula>If(ISPICKVAL( Save_Offer_Waived_Months__c , &quot;Accepted&quot;), Number_of_waived_months_offered__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Free Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>