force-app/main/default/objects/Opportunity/fields/No_Client_Left_Behind__c.field-meta.xml
<CustomField>
    <fullName>No_Client_Left_Behind__c</fullName>
    <formula>Not(IsBlank( No_Client_Left_Behind_Reason__c ))</formula>
    <inlineHelpText>Fill out the Reason and this will auto check</inlineHelpText>
    <label>No Client Left Behind</label>
    <type>Checkbox</type>
</CustomField>