force-app/main/default/objects/Opportunity/fields/No_Sat_Period_Sale__c.field-meta.xml
<CustomField>
    <fullName>No_Sat_Period_Sale__c</fullName>
    <formula>Max_Trial_End_Date__c &lt;= RecurSoft__Contract_Signed_Date__c ||
 ISBLANK( Max_Trial_End_Date__c ) ||
 ISNULL ( Max_Trial_End_Date__c )</formula>
    <label>No Sat Period Sale?</label>
    <type>Checkbox</type>
</CustomField>