force-app/main/default/objects/Opportunity/fields/Not_Qualified_Notes__c.field-meta.xml
<CustomField>
    <fullName>Not_Qualified_Notes__c</fullName>
    <label>Not Qualified - Notes</label>
    <type>TextArea</type>
</CustomField>