force-app/main/default/objects/Opportunity/fields/Notes_for_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Accounting__c</fullName>
    <inlineHelpText>Enter Notes for accounting</inlineHelpText>
    <label>Notes for Accounting</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>