force-app/main/default/objects/Opportunity/fields/Number_of_free_PRT_licences_offered__c.field-meta.xml
<CustomField>
    <fullName>Number_of_free_PRT_licences_offered__c</fullName>
    <inlineHelpText>The number of free PRT licences offered</inlineHelpText>
    <label>Number of free PRT licences offered</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>