force-app/main/default/objects/Opportunity/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Manually populated by sales rep.  Verified by Deal Desk at close.</description>
    <label>Number of Locations</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>