force-app/main/default/objects/Opportunity/fields/Number_of_Providers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Providers__c</fullName>
    <label>Number of Providers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>