force-app/main/default/objects/Opportunity/fields/Number_of_waived_months_offered__c.field-meta.xml
<CustomField>
    <fullName>Number_of_waived_months_offered__c</fullName>
    <inlineHelpText>The number of waived months offered</inlineHelpText>
    <label>Number of waived months offered</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>