force-app/main/default/objects/Opportunity/fields/Office_Locations__c.field-meta.xml
<CustomField>
    <fullName>Office_Locations__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number of Office Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>