force-app/main/default/objects/Opportunity/fields/Office_PM_Software__c.field-meta.xml
<CustomField>
    <fullName>Office_PM_Software__c</fullName>
    <formula>Account.Practice_Management_Software__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>You must change the Practice Management Software on the Account Page</inlineHelpText>
    <label>Practice Management Software</label>
    <type>Text</type>
</CustomField>