force-app/main/default/objects/Opportunity/fields/Ok_to_Sync_to_Intacct__c.field-meta.xml
<CustomField>
    <fullName>Ok_to_Sync_to_Intacct__c</fullName>
    <label>Ok to Sync to Intacct</label>
    <length>50</length>
    <type>Text</type>
</CustomField>