force-app/main/default/objects/Opportunity/fields/Open_Cancel_Requests__c.field-meta.xml
<CustomField>
    <fullName>Open_Cancel_Requests__c</fullName>
    <description>Auto Calculates the number of Cancel Requests that are still open</description>
    <label>Open Cancel Requests</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>