force-app/main/default/objects/Opportunity/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <formula>Owner.FirstName &amp;&quot; &quot;&amp; Owner.LastName</formula>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>