force-app/main/default/objects/Opportunity/fields/Original_Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Original_Setup_Fee__c</fullName>
    <description>Original Setup Fee used in Retention Opportunities</description>
    <inlineHelpText>Enter the</inlineHelpText>
    <label>Original Setup Fee</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>