force-app/main/default/objects/Opportunity/fields/Other_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Other_Competitor__c</fullName>
    <description>Text field for Other Competitor names.</description>
    <label>Other Competitor</label>
    <length>55</length>
    <type>Text</type>
</CustomField>