force-app/main/default/objects/Opportunity/fields/Other_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Other_Monthly_Revenue__c</fullName>
    <label>Other Monthly Revenue</label>
    <summarizedField>OpportunityLineItem.Other_Monthly_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Is_Monthly__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>