force-app/main/default/objects/Opportunity/fields/Outside_Sales_Rep_Lead__c.field-meta.xml
<CustomField>
    <fullName>Outside_Sales_Rep_Lead__c</fullName>
    <label>Outside Sales Rep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Al</fullName>
            </value>
            <value>
                <fullName>Adam</fullName>
            </value>
            <value>
                <fullName>Brandon</fullName>
            </value>
            <value>
                <fullName>Daisy</fullName>
            </value>
            <value>
                <fullName>Danny</fullName>
            </value>
            <value>
                <fullName>Dave</fullName>
            </value>
            <value>
                <fullName>Eric</fullName>
            </value>
            <value>
                <fullName>JoshQ</fullName>
            </value>
            <value>
                <fullName>Korbin</fullName>
            </value>
            <value>
                <fullName>Mary</fullName>
            </value>
            <value>
                <fullName>Nick</fullName>
            </value>
            <value>
                <fullName>Otis</fullName>
            </value>
            <value>
                <fullName>Robbie</fullName>
            </value>
            <value>
                <fullName>Tennli</fullName>
            </value>
            <value>
                <fullName>Not Claimed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>