force-app/main/default/objects/Opportunity/fields/Partner_KOL_Affiliate_Involved__c.field-meta.xml
<CustomField>
    <fullName>Partner_KOL_Affiliate_Involved__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field requires the Partner/KOL At Sale field to be populated</description>
    <label>Partner/KOL/Affiliate Involved</label>
    <type>Checkbox</type>
</CustomField>