force-app/main/default/objects/Opportunity/fields/Partner_KOL_At_Sale__c.field-meta.xml
<CustomField>
    <fullName>Partner_KOL_At_Sale__c</fullName>
    <description>This is the partner or KOL as entered at the time the Sales Split it determined. It will be used to correctly match up the Partner or Affiliate lookup fields in Sales Ops</description>
    <label>Partner/KOL At Sale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>