force-app/main/default/objects/Opportunity/fields/Post_Cancel_Survey__c.field-meta.xml
<CustomField>
    <fullName>Post_Cancel_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sugar field for Save Opportunity</description>
    <label>Post Cancel Survey</label>
    <type>Checkbox</type>
</CustomField>