force-app/main/default/objects/Opportunity/fields/Practice_Management_SYNC_Availability__c.field-meta.xml
<CustomField>
    <fullName>Practice_Management_SYNC_Availability__c</fullName>
    <formula>Account.Practice_Management_SYNC_Availability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice Management SYNC Availability</label>
    <type>Text</type>
</CustomField>