force-app/main/default/objects/Opportunity/fields/Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Processed_Date__c</fullName>
    <description>Sugar Field for Save Opportunity</description>
    <label>Processed Date</label>
    <type>Date</type>
</CustomField>