force-app/main/default/objects/Opportunity/fields/Product_Terms__c.field-meta.xml
<CustomField>
    <fullName>Product_Terms__c</fullName>
    <description>Roll up of Product Terms field on all products.  Set by Apex</description>
    <label>Product Terms</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>