force-app/main/default/objects/Opportunity/fields/Projected_Contract_Expiration_Renewal_Mo__c.field-meta.xml
<CustomField>
    <fullName>Projected_Contract_Expiration_Renewal_Mo__c</fullName>
    <inlineHelpText>The date the current Contract would expire or renew.</inlineHelpText>
    <label>Projected Contract Expiration/Renewal Mo</label>
    <type>Date</type>
</CustomField>