force-app/main/default/objects/Opportunity/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related Provider record</description>
    <inlineHelpText>Link to the related Provider record</inlineHelpText>
    <label>Provider</label>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>