force-app/main/default/objects/Opportunity/fields/Reason_for_closing__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_closing__c</fullName>
    <label>Reason for closing</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer Cancelled</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Future Interest</fullName>
            </value>
            <value>
                <fullName>Existing Customer/Duplicate</fullName>
            </value>
            <value>
                <fullName>No Integration</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>ROE Expired</fullName>
            </value>
            <value>
                <fullName>Non-Healthcare</fullName>
            </value>
            <value>
                <fullName>Foreign Prospect</fullName>
            </value>
            <value>
                <fullName>Did Not See Value</fullName>
            </value>
            <value>
                <fullName>Workflow Concerns</fullName>
            </value>
            <value>
                <fullName>Functionality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>