force-app/main/default/objects/Opportunity/fields/Recent_Import_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Recent_Import_Date_Time__c</fullName>
    <label>Recent Import Date Time</label>
    <type>DateTime</type>
</CustomField>