force-app/main/default/objects/Opportunity/fields/RecurSoft__Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Activation_Date__c</fullName>
    <inlineHelpText>Activation date of the subscription. Triggers generation of the billing schedule for products set up with Billing based on Activation date.</inlineHelpText>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>