force-app/main/default/objects/Opportunity/fields/RecurSoft__Bill_to_Account__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Bill_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Bill to Account)</relationshipLabel>
    <relationshipName>RecurSoft_OpportunitiesAccount</relationshipName>
    <type>Lookup</type>
</CustomField>