force-app/main/default/objects/Opportunity/fields/RecurSoft__Bill_to_Top_Level__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Bill_to_Top_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the related subscriptions and invoices will be related to the parent account that is at the top of the hierarchy of accounts.</description>
    <label>Bill to Top Level Parent</label>
    <type>Checkbox</type>
</CustomField>