force-app/main/default/objects/Opportunity/fields/RecurSoft__Close_Won_Indicator_del__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Close_Won_Indicator_del__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the opportunity is ready for closed won.</inlineHelpText>
    <label>Close Won Indicator</label>
    <type>Checkbox</type>
</CustomField>