force-app/main/default/objects/Opportunity/fields/RecurSoft__Close_Won_Validation_Missing_Fields__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Close_Won_Validation_Missing_Fields__c</fullName>
    <inlineHelpText>Populates with errors to be fixed before closing won the opportunity.</inlineHelpText>
    <label>Close Won Validation Missing Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>