force-app/main/default/objects/Opportunity/fields/RecurSoft__Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Contract_Signed_Date__c</fullName>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>