force-app/main/default/objects/Opportunity/fields/RecurSoft__Contract_Term_Days__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Contract_Term_Days__c</fullName>
    <inlineHelpText>Contract duration, in days.</inlineHelpText>
    <label>Contract Term (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>