force-app/main/default/objects/Opportunity/fields/RecurSoft__Contract_Term_Start_Date1__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Contract_Term_Start_Date1__c</fullName>
    <formula>RecurSoft__Expected_Contract_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deprecated - Contract Term Start Date</label>
    <type>Date</type>
</CustomField>