force-app/main/default/objects/Opportunity/fields/RecurSoft__Count_Aggregated_Monthly_Min__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Count_Aggregated_Monthly_Min__c</fullName>
    <label>Deprecated-Count Aggregated Monthly Min</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.RecurSoft__Counter_Aggregated_Monthly_Min__c</field>
        <operation>equals</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>