force-app/main/default/objects/Opportunity/fields/RecurSoft__CurrentGenerators__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__CurrentGenerators__c</fullName>
    <label>Deprecated - Current Generator(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>