force-app/main/default/objects/Opportunity/fields/RecurSoft__Expected_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Expected_Contract_Start_Date__c</fullName>
    <description>[CV] Please do not edit this field. It shows up on the layout for testing purposes only.</description>
    <label>Deprecated -Expected Contract Start Date</label>
    <type>Date</type>
</CustomField>