force-app/main/default/objects/Opportunity/fields/RecurSoft__Expected_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Expected_Install_Date__c</fullName>
    <formula>RecurSoft__Contract_Signed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deprecated - Expected Install Date</label>
    <type>Date</type>
</CustomField>