force-app/main/default/objects/Opportunity/fields/RecurSoft__Free_Months_Setting__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Free_Months_Setting__c</fullName>
    <inlineHelpText>Different seting options for contracts with free months.</inlineHelpText>
    <label>Free Months Setting</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RecurSoft__Number_of_Free_Months__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Extend Contract - At the Beginning</fullName>
            </value>
            <value>
                <fullName>Extend Contract - At the End</fullName>
            </value>
            <value>
                <fullName>Include in Contract Period - At the Beginning</fullName>
            </value>
            <value>
                <fullName>Include in Contract Period - At the End</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>