force-app/main/default/objects/Opportunity/fields/RecurSoft__Initial_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Initial_Contract_Term__c</fullName>
    <defaultValue>12</defaultValue>
    <inlineHelpText>Contract duration, in months.</inlineHelpText>
    <label>Contract Term (Months)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>