force-app/main/default/objects/Opportunity/fields/RecurSoft__Intacct_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Intacct_Customer_ID__c</fullName>
    <formula>RecurSoft__Bill_to_Account__r.RecurSoft__IntacctID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Corresponding Intacct ID. Updated via Intacct sync.</inlineHelpText>
    <label>Intacct Customer ID</label>
    <type>Text</type>
</CustomField>