force-app/main/default/objects/Opportunity/fields/RecurSoft__Intacct_End_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Intacct_End_Customer_ID__c</fullName>
    <formula>Account.RecurSoft__IntacctID__c</formula>
    <label>Intacct End Customer ID</label>
    <type>Text</type>
</CustomField>