force-app/main/default/objects/Opportunity/fields/RecurSoft__Intacct_Entity__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Intacct_Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Intacct Entity</label>
    <referenceTo>RecurSoft__Intacct_Entity__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>RecurSoft_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>