force-app/main/default/objects/Opportunity/fields/RecurSoft__Intacct_Shipping_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Intacct_Shipping_Contact_ID__c</fullName>
    <formula>IF(NOT(ISBLANK( RecurSoft__Shipping_Contact__c )), RecurSoft__Shipping_Contact__r.RecurSoft__Intacct_Contact_ID__c , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intacct Shipping Contact ID</label>
    <type>Text</type>
</CustomField>