force-app/main/default/objects/Opportunity/fields/RecurSoft__Invoice_date__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Invoice_date__c</fullName>
    <inlineHelpText>Custom date for the first invoice</inlineHelpText>
    <label>Deprecated - Invoice date</label>
    <type>Date</type>
</CustomField>