force-app/main/default/objects/Opportunity/fields/RecurSoft__Invoicing_Type__c.field-meta.xml
<CustomField>
    <fullName>RecurSoft__Invoicing_Type__c</fullName>
    <formula>TEXT(RecurSoft__Bill_to_Account__r.RecurSoft__Invoicing_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing Type</label>
    <type>Text</type>
</CustomField>